[tool.poetry]
name = "cipher_wy2365"
version = "0.1.0"
description = "A python package that encrypts and decrypts text using the Caesar cipher"
authors = ["Weiran Yu <weiranyu@hotmail.com>"]
license = "MIT"
readme = "README.md"
documentation = 'https://cipher-yu-weiran.readthedocs.io/en/latest/'
homepage = "https://github.com/QMSS-G5072-2020/cipher_yu_weiran"
repository = "https://github.com/QMSS-G5072-2020/cipher_yu_weiran"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
